# nexus_framework

./: README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  REFERENCE.md
examples/: app.py
nexus/: __init__.py
nexus/ai/: __init__.py  embeddings.py  engine.py  middleware.py  rag.py
nexus/auth/: __init__.py  jwt.py  rbac.py
nexus/cache/: __init__.py  backend.py
nexus/cli/: __init__.py  main.py
nexus/core/: __init__.py  app.py  config.py  dependencies.py  middleware.py  requests.py  responses.py  routing.py
nexus/orm/: __init__.py  base.py  manager.py
nexus/tasks/: __init__.py  queue.py
nexus/websocket/: __init__.py  connection.py  room.py
tests/: __init__.py  test_auth.py  test_cache.py  test_integration.py  test_middleware.py  test_orm.py  test_routing.py  test_tasks.py
